syntax = "proto3";

option java_multiple_files = true;
option java_package = "tproject.common";
option java_outer_classname = "HelloServiceProto";

service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
